--- a/index.html
+++ b/index.html
@@ -35,59 +35,62 @@
       </div>
     </section>
 
-    <!-- PROJECT GRID -->
-    <section id="projects" class="projects">
-      <div class="container">
-        <h3 class="section-title">Selected Work</h3>
-        <div class="project-grid">
+  <!-- PROJECT GRID -->
+<section id="projects" class="projects">
+  <div class="container">
+    <h3 class="section-title">Selected Work</h3>
 
-          <!-- PROJECT 1 -->
-          <a href="project-testudo.html" class="project-card">
-            <div class="project-thumb">
-              <img src="assets/testudo-cover.jpg" alt="Testudo Defense Solution brand identity">
-            </div>
-            <div class="project-meta">
-              <h4>Testudo Defense Solution</h4>
-              <p>Brand Identity · Visual System</p>
-            </div>
-          </a>
-
-          <!-- PROJECT 2 -->
-          <a href="project-triton.html" class="project-card">
-            <div class="project-thumb">
-              <img src="assets/triton-cover.jpg" alt="Triton Energy branding and identity">
-            </div>
-            <div class="project-meta">
-              <h4>Triton Energy</h4>
-              <p>Brand Identity · Layout Design</p>
-            </div>
-          </a>
-
-          <!-- PROJECT 3 -->
-          <a href="project-web.html" class="project-card">
-            <div class="project-thumb">
-              <img src="assets/web-cover.jpg" alt="Web interface design concept">
-            </div>
-            <div class="project-meta">
-              <h4>Interface Concept</h4>
-              <p>Web Layout · UI Exploration</p>
-            </div>
-          </a>
-
-          <!-- PROJECT 4 -->
-          <a href="project-stationery.html" class="project-card">
-            <div class="project-thumb">
-              <img src="assets/stationery-cover.jpg" alt="Stationery and print collateral design">
-            </div>
-            <div class="project-meta">
-              <h4>Stationery &amp; Collateral</h4>
-              <p>Print · Systems · Application</p>
-            </div>
-          </a>
-
+    <div class="project-grid">
+      <!-- PROJECT 1 – TESTUDO -->
+      <a href="project-testudo.html" class="project-card">
+        <div class="project-thumb">
+          <img src="assets/testudo-cover.jpg"
+               alt="Testudo Defense Solution brand identity">
         </div>
-      </div>
-    </section>
+        <div class="project-meta">
+          <h4>Testudo Defense Solution</h4>
+          <p>Brand Identity · Visual System</p>
+        </div>
+      </a>
+
+      <!-- PROJECT 2 – TRITON -->
+      <a href="project-triton.html" class="project-card">
+        <div class="project-thumb">
+          <img src="assets/triton-cover.jpg"
+               alt="Triton Energy branding and identity">
+        </div>
+        <div class="project-meta">
+          <h4>Triton Energy</h4>
+          <p>Brand Identity · Layout Design</p>
+        </div>
+      </a>
+
+      <!-- PROJECT 3 – MYTHOS BOOKSTORE (WEB / UI) -->
+      <a href="project-Mythos.html" class="project-card">
+        <div class="project-thumb">
+          <img src="assets/mythos-cover.jpg"
+               alt="Mythos Bookstore web layout concept">
+        </div>
+        <div class="project-meta">
+          <h4>Mythos Bookstore</h4>
+          <p>Web Layout · UI Exploration</p>
+        </div>
+      </a>
+
+      <!-- PROJECT 4 – ELDRITCH STUDIOS (VIDEO) -->
+      <a href="project-video.html" class="project-card">
+        <div class="project-thumb">
+          <img src="assets/eldritch-cover.jpg"
+               alt="Eldritch Studios logo and title frame from intro video">
+        </div>
+        <div class="project-meta">
+          <h4>Eldritch Studios</h4>
+          <p>Motion Intro · Brand Concept</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</section>
 
     <!-- ABOUT -->
     <section id="about" class="about">
