--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- PROJECT 1 – TESTUDO -->
       <a href="project-testudo.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/testudo-cover.jpg"
+          <img src="assets/testudo-cover.png"
                alt="Testudo Defense Solution brand identity">
         </div>
         <div class="project-meta">
@@ -56,7 +56,7 @@
       <!-- PROJECT 2 – TRITON -->
       <a href="project-triton.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/triton-cover.jpg"
+          <img src="assets/triton-cover.png"
                alt="Triton Energy branding and identity">
         </div>
         <div class="project-meta">
@@ -68,7 +68,7 @@
       <!-- PROJECT 3 – MYTHOS BOOKSTORE (WEB / UI) -->
       <a href="project-Mythos.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/mythos-cover.jpg"
+          <img src="assets/mythos-cover.png"
                alt="Mythos Bookstore web layout concept">
         </div>
         <div class="project-meta">
@@ -80,7 +80,7 @@
       <!-- PROJECT 4 – ELDRITCH STUDIOS (VIDEO) -->
       <a href="project-video.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/eldritch-cover.jpg"
+          <img src="assets/eldritch-cover.png"
                alt="Eldritch Studios logo and title frame from intro video">
         </div>
         <div class="project-meta">
