--- a/project-testudo.html
+++ b/project-testudo.html
@@ -95,14 +95,16 @@
           <h2>Typography &amp; Color System</h2>
           <p>
             The identity combines a classic serif wordmark with a clean grotesque typeface for functional text.
-            The palette balances a strong red—signalling urgency and protection—with neutral greys to keep the
+            The palette balances a strong red signalling urgency and protection with neutral greys to keep the
             system grounded and professional.
           </p>
         </div>
 
         <div class="project-gallery project-gallery--single">
           <figure class="project-figure">
-            <img src="assets/testudo/testudo-type-color.jpg"
+            <img src="assets/testudo/testudo-typography.jpg" ...>
+<img src="assets/testudo/testudo-color-palette.jpg" ...>
+
                  alt="Testudo typography and color palette specification"
                  class="project-image">
             <figcaption>
