--- a/project-testudo.html
+++ b/project-testudo.html
@@ -100,7 +100,7 @@
           </p>
         </div>
 
-        <div class="project-gallery project-gallery--single">
+        <div class="project-gallery project-gallery--two">
           <figure class="project-figure">
             <img src="assets/testudo/testudo-typography.jpg" ...>
 <img src="assets/testudo/testudo-color-palette.jpg" ...>
