--- a/project-testudo.html
+++ b/project-testudo.html
@@ -101,17 +101,20 @@
         </div>
 
         <div class="project-gallery project-gallery--two">
-          <figure class="project-figure">
-            <img src="assets/testudo/testudo-typography.jpg" ...>
-<img src="assets/testudo/testudo-color-palette.jpg" ...>
+  <figure class="project-figure">
+    <img src="assets/testudo/testudo-typography.jpg"
+         alt="Testudo typography system"
+         class="project-image">
+    <figcaption>Primary and supporting typefaces.</figcaption>
+  </figure>
 
-                 alt="Testudo typography and color palette specification"
-                 class="project-image">
-            <figcaption>
-              Type hierarchy and color palette form the backbone of the brand’s visual system.
-            </figcaption>
-          </figure>
-        </div>
+  <figure class="project-figure">
+    <img src="assets/testudo/testudo-color-palette.jpg"
+         alt="Testudo color palette"
+         class="project-image">
+    <figcaption>Core color palette and usage.</figcaption>
+  </figure>
+</div>
       </div>
     </section>
 
