--- a/project-testudo.html
+++ b/project-testudo.html
@@ -153,7 +153,7 @@
                  alt="Testudo logo applied to large exterior signage and shipping containers"
                  class="project-image">
             <figcaption>
-              Large-scale signage and containers demonstrate how the mark holds up at distance.
+              Large-scale trasnport containers demonstrate how the mark holds up at any surface.
             </figcaption>
           </figure>
         </div>
