--- a/project-triton.html
+++ b/project-triton.html
@@ -2,77 +2,223 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Testudo Defense Solution – Brand Identity</title>
+  <title>Testudo Defense Solution · Joshua Martinez</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Brand identity case study for Testudo Defense Solution by Joshua Martinez.">
   <link rel="stylesheet" href="style.css">
 </head>
+  <!-- Lightbox -->
+<div class="lightbox" id="lightbox" aria-hidden="true">
+  <button class="lightbox-close" type="button" aria-label="Close (Esc)">×</button>
+  <img class="lightbox-img" alt="">
+</div>
+
+<script>
+  (function () {
+    const box = document.getElementById("lightbox");
+    const boxImg = box.querySelector(".lightbox-img");
+    const closeBtn = box.querySelector(".lightbox-close");
+
+    function openLightbox(src, alt) {
+      boxImg.src = src;
+      boxImg.alt = alt || "";
+      box.classList.add("is-open");
+      box.setAttribute("aria-hidden", "false");
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeLightbox() {
+      box.classList.remove("is-open");
+      box.setAttribute("aria-hidden", "true");
+      boxImg.src = "";
+      document.body.style.overflow = "";
+    }
+
+    document.addEventListener("click", (e) => {
+      const img = e.target.closest("img.zoomable");
+if (!img) return;
+
+
+      e.preventDefault();
+      openLightbox(img.src, img.alt);
+    });
+
+    closeBtn.addEventListener("click", closeLightbox);
+    box.addEventListener("click", (e) => {
+      if (e.target === box) closeLightbox(); // click outside image closes
+    });
+
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape") closeLightbox();
+    });
+  })();
+</script>
+  <!-- Lightbox -->
+<div class="lightbox" id="lightbox" aria-hidden="true">
+  <button class="lightbox-close" type="button" aria-label="Close (Esc)">×</button>
+  <img class="lightbox-img" alt="">
+</div>
 <body>
+
+  <!-- SITE HEADER -->
   <header class="site-header">
     <div class="container header-inner">
-      <div class="logo-mark">
-        <span class="logo-dot"></span>
-      </div>
-      <nav class="main-nav">
-        <a href="index.html#projects">Projects</a>
-        <a href="index.html#about">About</a>
-        <a href="index.html#contact">Contact</a>
+      <a href="index.html" class="site-logo">
+        <span class="site-name">Joshua Martinez</span>
+      </a>
+      <nav class="site-nav">
+        <a href="index.html#projects" class="nav-link">Projects</a>
+        <a href="index.html#about" class="nav-link">About</a>
+        <a href="index.html#contact" class="nav-link">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main>
+  <!-- PROJECT HERO -->
+  <main class="project-page">
     <section class="project-hero">
-      <div class="container">
-        <a href="index.html#projects" class="back-link">Back to projects</a>
-        <h1>Testudo Defense Solution</h1>
-        <p>Brand Identity · Visual System · Nonlethal Defense</p>
+      <div class="container project-hero-inner">
+        <div class="project-hero-text">
+          <p class="project-label">Brand Identity · Visual System</p>
+          <h1 class="project-title">Testudo Defense Solution</h1>
+          <p class="project-intro">
+            Testudo Defense Solution is a non-lethal defense company focused on protecting and preserving life.
+            The identity needed to feel serious, trustworthy, and contemporary communicating protection without
+            leaning into militaristic clichés.
+          </p>
+          <div class="project-meta-row">
+            <div class="project-meta-item">
+              <h3>Role</h3>
+              <p>Logo design, visual system, brand guidelines, applications</p>
+            </div>
+            <div class="project-meta-item">
+              <h3>Deliverables</h3>
+              <p>Primary &amp; secondary logos, grid system, typography &amp; color, stationery, ID system, signage</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-hero-media">
+          <img src="assets/testudo/testudo-hero.jpg"
+               alt="Testudo Defense Solution logo on a clean white background"
+               class="project-hero-image zoomable">
+        </div>
       </div>
     </section>
 
-    <section class="project-layout">
+    <!-- SECTION: LOGO & GRID -->
+    <section class="project-section">
       <div class="container">
-
-        <div class="intro">
+        <div class="project-section-header">
+          <h2>Logo Concept &amp; Construction</h2>
           <p>
-            Testudo Defense Solution is a nonlethal defense brand focused on protection,
-            stability, and control. The identity system uses a structural cube mark
-            and modular pattern to communicate reliability and containment without aggression.
+            The mark is based on the Roman <em>testudo</em> shield formation multiple shields locking together
+            into a single defensive structure. The cube is built from individual “shield” panels, creating a
+            sense of unity, stability, and controlled strength.
           </p>
         </div>
 
-        <div class="meta-row">
-          <div class="meta-block">
-            <h4>Role</h4>
-            <p>Brand Identity · Logo Design · Layout</p>
-          </div>
-          <div class="meta-block">
-            <h4>Scope</h4>
-            <p>Logo, pattern system, stationery, digital applications</p>
-          </div>
-          <div class="meta-block">
-            <h4>Tools</h4>
-            <p>Affinity Designer / Photo</p>
-          </div>
-        </div>
+        <div class="project-gallery project-gallery--two">
+          <figure class="project-figure">
+            <img src="assets/testudo/testudo-logo-grid.jpg"
+                 alt="Testudo logo grid construction with dashed guidelines"
+                 class="project-image zoomable">
+            <figcaption>
+              Grid-based construction keeps the mark precise and reproducible across formats.
+            </figcaption>
+          </figure>
 
-        <div class="image-stack">
-          <img src="assets/testudo-cover.jpg" alt="Testudo Defense Solution primary brand identity presentation">
-          <img src="assets/testudo-1.jpg" alt="Logo variations and grid for Testudo Defense Solution">
-          <img src="assets/testudo-2.jpg" alt="Stationery and brand applications for Testudo Defense Solution">
+          <figure class="project-figure">
+            <img src="assets/testudo/testudo-logo-variations.jpg"
+                 alt="Testudo logo variations on different background colors"
+                 class="project-image zoomable">
+            <figcaption>
+              Primary, reversed, and monochrome versions provide flexibility for print, digital, and product use.
+            </figcaption>
+          </figure>
         </div>
-
       </div>
     </section>
+
+    <!-- SECTION: TYPOGRAPHY & COLOR -->
+    <section class="project-section project-section-alt">
+      <div class="container">
+        <div class="project-section-header">
+          <h2>Typography &amp; Color System</h2>
+          <p>
+            The identity combines a classic serif wordmark with a clean grotesque typeface for functional text.
+            The palette balances a strong red signalling urgency and protection with neutral greys to keep the
+            system grounded and professional.
+          </p>
+        </div>
+
+        <div class="project-gallery project-gallery--two">
+  <figure class="project-figure">
+    <img src="assets/testudo/testudo-typography.jpg"
+         alt="Testudo typography system"
+         class="project-image zoomable">
+    <figcaption>Primary and supporting typefaces.</figcaption>
+  </figure>
+
+  <figure class="project-figure">
+    <img src="assets/testudo/testudo-color-palette.jpg"
+         alt="Testudo color palette"
+         class="project-image zoomable">
+    <figcaption>Core color palette and usage.</figcaption>
+  </figure>
+</div>
+      </div>
+    </section>
+
+    <!-- SECTION: APPLICATIONS -->
+    <section class="project-section">
+      <div class="container">
+        <div class="project-section-header">
+          <h2>Real-World Applications</h2>
+          <p>
+            With the core system defined, the identity extends into touchpoints that feel consistent and
+            recognizable from business cards to large-scale signage.
+          </p>
+        </div>
+
+        <div class="project-gallery project-gallery--three">
+          <figure class="project-figure">
+            <img src="assets/testudo/testudo-business-card.jpg"
+                 alt="Testudo business card and stationery layout"
+                 class="project-image zoomable">
+            <figcaption>
+              Stationery system with restrained use of red for emphasis.
+            </figcaption>
+          </figure>
+
+          <figure class="project-figure">
+            <img src="assets/testudo/testudo-lanyard.jpg"
+                 alt="Testudo ID badge and lanyard system"
+                 class="project-image zoomable">
+            <figcaption>
+              ID badges and lanyards extend the shield motif into everyday use.
+            </figcaption>
+          </figure>
+
+          <figure class="project-figure">
+            <img src="assets/testudo/testudo-container.jpg"
+                 alt="Testudo logo applied to large exterior signage and shipping containers"
+                 class="project-image zoomable">
+            <figcaption>
+              Large-scale trasnport containers demonstrate how the mark holds up at any surface.
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECT FOOTER NAV -->
+    <section class="project-section project-nav">
+      <div class="container">
+        <a href="index.html#projects" class="button-link">← Back to projects</a>
+      </div>
+    </section>
+
   </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; <span id="year"></span> Joshua Martinez. All rights reserved.</p>
-    </div>
-    <script>
-      document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
-  </footer>
 </body>
 </html>
