--- a/project-triton.html
+++ b/project-triton.html
@@ -32,7 +32,7 @@
           <h1 class="project-title">Triton Energy</h1>
 
           <p class="project-description">
-            Triton Energy is a renewable energy brand concept centered on hydroelectric power—designed to feel
+            Triton Energy is a renewable energy brand concept centered on hydroelectric power designed to feel
             trustworthy, refined, and rooted in mythic symbolism without becoming decorative.
           </p>
 
