--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- PROJECT 2 – TRITON -->
       <a href="project-triton.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/triton-cover.png"
+          <img src="assets/triton-cover.jpg"
                alt="Triton Energy branding and identity">
         </div>
         <div class="project-meta">
@@ -68,7 +68,7 @@
       <!-- PROJECT 3 – MYTHOS BOOKSTORE (WEB / UI) -->
       <a href="project-Mythos.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/mythos-cover.png"
+          <img src="assets/mythos-cover.jpg"
                alt="Mythos Bookstore web layout concept">
         </div>
         <div class="project-meta">
