--- a/project-video.html
+++ b/project-video.html
@@ -121,29 +121,14 @@
           </p>
         </div>
 
-        <!-- OPTION A: YouTube/Vimeo embed (recommended) -->
-        <div class="video-wrap">
-          <div class="video-aspect">
-            <iframe
-              src="PASTE_YOUR_VIDEO_EMBED_URL_HERE"
-              title="Eldritch Studios Intro Video"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-          </div>
-        </div>
-
-        <!-- OPTION B: Local MP4 (use this instead of the iframe if you host the video in your repo)
-        <div class="video-wrap">
-          <div class="video-aspect">
-            <video controls preload="metadata" poster="assets/eldritch/eldritch-poster.jpg">
-              <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
-              Sorry, your browser does not support the video tag.
-            </video>
-          </div>
-        </div>
-        -->
-
+       <div class="video-wrap">
+  <div class="video-aspect">
+    <video controls preload="metadata">
+      <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
       </div>
     </section>
 
