--- a/project-video.html
+++ b/project-video.html
@@ -91,25 +91,24 @@
     </section>
 
     <!-- SECTION: LOGO -->
-    <section class="project-section">
-      <div class="container">
-        <div class="project-section-header">
-          <h2>Logo Mark</h2>
-          <p>
-            A compact, high-contrast mark designed to feel cinematic and readable across digital touchpoints.
-          </p>
-        </div>
+   <section class="project-section">
+  <h3>Motion Intro</h3>
+  <p>
+    A short video intro to establish tone and atmosphere. Clean, minimal, and brand-consistent.
+  </p>
 
-        <div class="project-gallery project-gallery--single">
-          <figure class="project-figure">
-            <img
-              src="assets/eldritch/eldritch-logo.jpg"
-              alt="Eldritch Studios logo mark"
-              class="project-image zoomable">
-          </figure>
-        </div>
-      </div>
-    </section>
+  <div class="video-wrapper">
+    <video
+      controls
+      preload="metadata"
+      poster="assets/eldritch/eldritch-hero.jpg"
+    >
+      <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</section>
+
 
     <!-- SECTION: VIDEO -->
     <section class="project-section project-section-alt">
