--- a/project-video.html
+++ b/project-video.html
@@ -105,7 +105,7 @@
        <div class="video-wrap">
   <div class="video-aspect">
     <video controls preload="metadata">
-      <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
+   <source src="/jmportfolio.github.io/assets/eldritch/eldritch-intro.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
