--- a/project-video.html
+++ b/project-video.html
@@ -104,10 +104,10 @@
 
        <div class="video-wrap">
   <div class="video-aspect">
-    <video controls preload="metadata">
-   <source src="/jmportfolio.github.io/assets/eldritch/eldritch-intro.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+   <video controls preload="metadata">
+  <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
   </div>
 </div>
       </div>
