--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
       <!-- PROJECT 4 – ELDRITCH STUDIOS (VIDEO) -->
       <a href="project-video.html" class="project-card">
         <div class="project-thumb">
-          <img src="assets/eldritch-cover.png"
+          <div class="project-thumb video-thumb">
+  <video autoplay muted loop playsinline preload="metadata">
+    <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
+  </video>
+</div>
+
                alt="Eldritch Studios logo and title frame from intro video">
         </div>
         <div class="project-meta">
