--- a/project-Mythos.html
+++ b/project-Mythos.html
@@ -39,7 +39,7 @@
           <h1 class="project-title">Mythos Bookstore</h1>
 
           <p class="project-intro">
-            A web interface concept for an online bookstore focused on weird fiction—horror, sci-fi, fantasy, and thrillers.
+            A web interface concept for an online bookstore focused on weird fiction horror, sci-fi, fantasy, and thrillers.
             The goal was a clean, readable layout with clear browsing and product discovery.
           </p>
 
