--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo-mark">
-    
-      </div>
-      <nav class="main-nav">
-        <a href="#projects">Projects</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
+ <header class="site-header">
+  <div class="container header-inner">
+    <a href="index.html" class="site-logo">Joshua Martinez</a>
+
+    <nav class="site-nav" aria-label="Primary">
+      <a href="#projects">Projects</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <!-- HERO SECTION -->
