--- a/index.html
+++ b/index.html
@@ -1,137 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Joshua Martinez – Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Portfolio of Joshua Martinez, a multidisciplinary designer & visual problem solver focused on branding, identity, and visual systems.">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Portfolio of Joshua Martinez, a multidisciplinary designer focused on branding, identity, and visual systems." />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
- <header class="site-header">
-  <div class="container header-inner">
-    <a href="index.html" class="site-logo">Joshua Martinez</a>
 
-    <nav class="site-nav" aria-label="Primary">
-      <a href="#projects">Projects</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </div>
-</header>
+  <!-- SITE HEADER -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="#top" class="site-logo" aria-label="Home">
+        <span class="monogram" aria-hidden="true">JM</span>
+      </a>
 
+      <nav class="site-nav" aria-label="Primary">
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-  <main>
-    <!-- HERO SECTION -->
+  <main id="top">
+
+    <!-- HERO -->
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-text">
-          <h1>Joshua Martinez</h1>
-          <h2>Multidisciplinary Designer &amp; Visual Problem Solver</h2>
-          <p>
-            I create brand identities, visual systems, and digital layouts that balance structure, clarity, and character.
+          <p class="kicker">Joshua Martinez</p>
+          <h1>Designer &amp; Visual Problem Solver</h1>
+          <p class="lede">
+            I build brand identities, visual systems, and digital layouts that balance structure, clarity, and character.
           </p>
         </div>
       </div>
     </section>
 
-  <!-- PROJECT GRID -->
-<section id="projects" class="projects">
-  <div class="container">
-    <h3 class="section-title">Selected Work</h3>
+    <!-- PROJECTS -->
+    <section id="projects" class="projects">
+      <div class="container">
+        <h2 class="section-title">Selected Work</h2>
 
-    <div class="project-grid">
-      <!-- PROJECT 1 – TESTUDO -->
-      <a href="project-testudo.html" class="project-card">
-        <div class="project-thumb">
-          <img src="assets/testudo-cover.jpg"
-               alt="Testudo Defense Solution brand identity">
-        </div>
-        <div class="project-meta">
-          <h4>Testudo Defense Solution</h4>
-          <p>Brand Identity · Visual System</p>
-        </div>
-      </a>
+        <div class="project-grid">
 
-      <!-- PROJECT 2 – TRITON -->
-      <a href="project-triton.html" class="project-card">
-        <div class="project-thumb">
-          <img src="assets/triton-cover.jpg"
-               alt="Triton Energy branding and identity">
-        </div>
-        <div class="project-meta">
-          <h4>Triton Energy</h4>
-          <p>Brand Identity · Layout Design</p>
-        </div>
-      </a>
+          <!-- PROJECT 1 – TESTUDO -->
+          <a href="project-testudo.html" class="project-card">
+            <div class="project-thumb">
+              <img src="assets/testudo-cover.jpg" alt="Testudo Defense Solution brand identity" loading="lazy">
+            </div>
+            <div class="project-meta">
+              <h3>Testudo Defense Solution</h3>
+              <p>Brand Identity · Visual System</p>
+            </div>
+          </a>
 
-      <!-- PROJECT 3 – MYTHOS BOOKSTORE (WEB / UI) -->
-      <a href="project-Mythos.html" class="project-card">
-        <div class="project-thumb">
-          <img src="assets/mythos-cover.jpg"
-               alt="Mythos Bookstore web layout concept">
-        </div>
-        <div class="project-meta">
-          <h4>Mythos Bookstore</h4>
-          <p>Web Layout · UI Exploration</p>
-        </div>
-      </a>
+          <!-- PROJECT 2 – TRITON -->
+          <a href="project-triton.html" class="project-card">
+            <div class="project-thumb">
+              <img src="assets/triton-cover.jpg" alt="Triton Energy branding and identity" loading="lazy">
+            </div>
+            <div class="project-meta">
+              <h3>Triton Energy</h3>
+              <p>Brand Identity · Layout Design</p>
+            </div>
+          </a>
 
-      <!-- PROJECT 4 – ELDRITCH STUDIOS (VIDEO) -->
-<a href="project-video.html" class="project-card">
-  <div class="project-thumb video-thumb">
-    <video autoplay muted loop playsinline preload="metadata">
-      <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
-    </video>
-  </div>
+          <!-- PROJECT 3 – MYTHOS -->
+          <a href="project-Mythos.html" class="project-card">
+            <div class="project-thumb">
+              <img src="assets/mythos-cover.jpg" alt="Mythos Bookstore web layout concept" loading="lazy">
+            </div>
+            <div class="project-meta">
+              <h3>Mythos Bookstore</h3>
+              <p>Web Layout · UI Exploration</p>
+            </div>
+          </a>
 
-  <div class="project-meta">
-    <h4>Eldritch Studios</h4>
-    <p>Motion Intro · Brand Concept</p>
-  </div>
-</a>
+          <!-- PROJECT 4 – ELDRITCH (VIDEO THUMB) -->
+          <a href="project-video.html" class="project-card">
+            <div class="project-thumb video-thumb">
+              <video autoplay muted loop playsinline preload="metadata" aria-label="Eldritch Studios motion intro thumbnail">
+                <source src="assets/eldritch/eldritch-intro.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="project-meta">
+              <h3>Eldritch Studios</h3>
+              <p>Motion Intro · Brand Concept</p>
+            </div>
+          </a>
 
+        </div><!-- /.project-grid -->
+      </div><!-- /.container -->
+    </section><!-- /#projects -->
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h3 class="section-title">About</h3>
-        <p>
-          I’m a graphic designer focused on branding, visual identity, and clear communication.
-          I enjoy building systems: logos, grids, type hierarchies, and layouts that feel intentional and grounded.
-        </p>
-        <p>
-          My work spans brand identities, web layouts, and stationery systems, always with an emphasis on structure,
-          readability, and problem-solving over decoration.
-        </p>
+        <h2 class="section-title">About</h2>
+        <div class="text-block">
+          <p>
+            I’m a graphic designer focused on branding, visual identity, and clear communication.
+            I like building systems: logos, grids, type hierarchies, and layouts that feel intentional and grounded.
+          </p>
+          <p>
+            My work spans brand identities, web layouts, and supporting assets — with an emphasis on structure,
+            readability, and problem-solving over decoration.
+          </p>
+        </div>
       </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="contact">
       <div class="container">
-        <h3 class="section-title">Contact</h3>
-        <p>
-          For work opportunities, collaborations, or questions, you can reach me at:
+        <h2 class="section-title">Contact</h2>
+        <p class="lede">
+          For opportunities, collaborations, or questions:
         </p>
+
         <p class="contact-line">
           <a href="mailto:Joshuadavid0119@gmail.com">Joshuadavid0119@gmail.com</a>
         </p>
+
         <p class="contact-line">
           <a href="https://www.behance.net/JoshuaMR95" target="_blank" rel="noopener noreferrer">Behance · JoshuaMR95</a>
         </p>
       </div>
     </section>
+
   </main>
 
   <footer class="site-footer">
-    <div class="container">
+    <div class="container footer-inner">
       <p>&copy; <span id="year"></span> Joshua Martinez. All rights reserved.</p>
     </div>
-    <script>
-      // Set current year
-      document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
   </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
