--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             I like building systems: logos, grids, type hierarchies, and layouts that feel intentional and grounded.
           </p>
           <p>
-            My work spans brand identities, web layouts, and supporting assets — with an emphasis on structure,
+            My work spans brand identities, web layouts, and supporting assets with an emphasis on structure,
             readability, and problem-solving over decoration.
           </p>
         </div>
