--- a/project-testudo.html
+++ b/project-testudo.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
-  <!-- Lightbox -->
+<!-- LIGHTBOX (ONE TIME ONLY per page) -->
 <div class="lightbox" id="lightbox" aria-hidden="true">
   <button class="lightbox-close" type="button" aria-label="Close (Esc)">×</button>
   <img class="lightbox-img" alt="">
 </div>
+
 
 <script>
   (function () {
