--- a/project-video.html
+++ b/project-video.html
@@ -49,13 +49,12 @@
     </div>
   </header>
 
-  <!-- LIGHTBOX (for logo click-to-zoom) -->
-  <div class="lightbox" id="lightbox" aria-hidden="true">
-    <button class="lightbox-close" type="button" aria-label="Close (Esc)">×</button>
-    <img class="lightbox-img" alt="">
-  </div>
+  <!-- LIGHTBOX (ONE TIME ONLY per page) -->
+<div class="lightbox" id="lightbox" aria-hidden="true">
+  <button class="lightbox-close" type="button" aria-label="Close (Esc)">×</button>
+  <img class="lightbox-img" alt="">
+</div>
 
-  <main class="project-page">
 
     <!-- PROJECT HERO -->
     <section class="project-hero">
